--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning-english-app",
+  "name": "learn-english-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,7 +19,6 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
-    "bootstrap": "^5.0.0-beta1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
